# dlsys-cmu

./: .gitignore  README.md  pyproject.toml
hw0/: hw0.ipynb
hw0/src/: simple_ml.py  simple_ml_ext.cpp
hw1/: hw1.ipynb
hw1/apps/: simple_ml.py
hw1/python/needle/: autograd.py
hw1/python/needle/ops/: ops_mathematic.py
hw2/: hw2.ipynb
hw2/apps/: mlp_resnet.py
hw2/python/needle/: optim.py
hw2/python/needle/data/: data_transforms.py
hw2/python/needle/data/datasets/: mnist_dataset.py
hw2/python/needle/init/: init_initializers.py
hw2/python/needle/nn/: nn_basic.py
hw2/python/needle/ops/: ops_logarithmic.py  ops_mathematic.py
hw2/tests/hw2/: test_nn_and_optim.py
hw3/: hw3.ipynb
hw3/python/needle/backend_ndarray/: ndarray.py
hw4/: CMakeLists.txt
hw4/apps/: models.py  simple_ml.py
hw4/python/needle/: autograd.py  backend_selection.py  optim.py
hw4/python/needle/backend_ndarray/: ndarray.py
hw4/python/needle/data/: data_basic.py
hw4/python/needle/data/datasets/: cifar10_dataset.py  ptb_dataset.py
hw4/python/needle/init/: init_initializers.py
hw4/python/needle/nn/: nn_basic.py  nn_conv.py  nn_sequence.py  nn_transformer.py
hw4/python/needle/ops/: ops_logarithmic.py  ops_mathematic.py
hw4/src/: metal_ops.hpp  ndarray_backend_cpu.cc  ndarray_backend_cuda.cu  ndarray_backend_metal.cc  ops.metal
hw4/tests/hw4/: test_conv.py  test_transformer.py
